--- a/.gitignore
+++ b/.gitignore
@@ -166,3 +166,7 @@ deploy.prototxt
 LICENSE
 res10_300x300_ssd_iter_140000.caffemodel
 *.avi
+output/*.jpg
+pgp_centroid_tracker/output_frames/*.jpg
+*.zip
+*.pt
